# diary

./: .gitignore  Dockerfile  README.md  auth_data.py  db.py  diary.service  docker-compose.yaml  init-mongo.js  main.py  models.py  pyproject.toml  requirements.txt  supervisord.conf  work_calendar.py
.github/workflows/: pylint.yml  test_modules.yml
app/: .env  main.py  tasks.py
app/db/: base.py
app/endpoints/: adjustments.py  asset_extra_data.py  assets.py  auth.py  logs.py  modules.py  scraping.py  users.py
app/models/: adjustments.py  assets.py  users.py
app/services/: assets.py  email.py  final_model.py  logs.py  modules.py  modules_mock_data.py  mongo.py  oauth2.py  scraping.py  user.py  utils.py
app/settings/: config.py
app/templates/: error.html  verification.html
backend/: .env  main.py  tasks.py
backend/db/: base.py
backend/endpoints/: New_video.py  adjustments.py  asset_extra_data.py  assets.py  auth.py  downloads.py  logs.py  modules.py  scraping.py  users.py  video.py
backend/models/: adjustments.py  assets.py  users.py
backend/quaries/: users.py
backend/services/: assets.py  email.py  excel.py  final_model.py  logs.py  modules.py  modules_mock_data.py  mongo.py  oauth2.py  scraping.py  url.py  user.py  utils.py
backend/settings/: config.py
backend/static/files/: elxnode.sh  hyperliquid.sh  morph_1.sh  (+4 more)
backend/templates/: _styles.html  base.html  error.html  video.html
telegramBot/: auth_data.py  main.py  settings.py  work_calendar.py
telegramBot/database/: base.py
tests/: conftest.py  data_test.py  test_modules.py
(+3 files in other folders)
