[tool.poetry]
name = "diary"
version = "0.1.0"
description = ""
authors = ["malkir23 <mandragorand@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.1"
pydantic = {extras = ["email"], version = "^2.1.1"}
asyncpg = "^0.28.0"
uvicorn = "^0.23.1"
pydantic-settings = "^2.0.2"
SQLAlchemy = "^2.0.19"
passlib = "^1.7.4"
bson = "^0.5.10"
fastapi-mail = "^1.4.1"
fastapi-jwt-auth = {extras = ["asymmetric"], version = "^0.5.0"}
websockets = "^11.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
